Fix mobile layout issues

--- a/src/styles/2-modules/_case-study.scss
+++ b/src/styles/2-modules/_case-study.scss
@@ -15,6 +15,10 @@
     align-items: center;
     text-align: left;
 
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+    }
+
     > * {
       > *:nth-child(2) {
         margin: 0.5rem 0 0;
